Se agregaron todas las activities que se necesitaran, ademas de que se corrigieron errores menores de la estructura de la BD

--- a/app/src/main/res/layout/activity_login_manual.xml
+++ b/app/src/main/res/layout/activity_login_manual.xml
@@ -4,55 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="arenzo.alejandroochoa.ccure.main">
+    tools:context="arenzo.alejandroochoa.ccure.loginManual">
 
     <TextView
-        android:id="@+id/txtFechaLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/txtFechaLoginManual"
+        android:layout_width="118dp"
+        android:layout_height="20dp"
         android:gravity="center"
         android:text="22-04-2017 12:23:16"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Favor de pasar la tarjeta por el lector para iniciar sesión"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtFechaLogin"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <ImageView
-        android:id="@+id/imvRFIDLogin"
-        android:layout_width="286dp"
-        android:layout_height="220dp"
-        app:srcCompat="@drawable/im_rfid"
-        android:layout_marginTop="34dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        tools:layout_editor_absoluteY="16dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/btnOlvideTarjetaLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Olvidé mi tarjeta"
-        android:layout_marginTop="28dp"
-        app:layout_constraintTop_toBottomOf="@+id/imvRFIDLogin"
+        android:id="@+id/btnLoginManual"
+        android:layout_width="88dp"
+        android:layout_height="42dp"
+        android:text="@string/entrar"
+        android:layout_marginTop="45dp"
+        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
+    <EditText
+        android:id="@+id/edtNumeroEmpleado"
+        android:layout_width="218dp"
+        android:layout_height="45dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="2389"
+        android:layout_marginTop="41dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtNumeroEmpleado"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:id="@+id/txtNumeroEmpleado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/escribe_tu_numero_de_empleado"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/txtFechaLoginManual"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 </android.support.constraint.ConstraintLayout>
