--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:ignore="MissingPrefix"
     tools:context="arenzo.alejandroochoa.ccure.main">
 
     <TextView
@@ -13,6 +14,7 @@
         android:gravity="center"
         android:text="22-04-2017 12:23:16"
         android:layout_marginRight="8dp"
+        fontPath="fonts/Roboto-Bold.ttf"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -24,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Favor de pasar la tarjeta por el lector para iniciar sesión"
+        fontPath="fonts/Roboto-Bold.ttf"
         android:layout_marginTop="31dp"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLogin"
         android:layout_marginRight="8dp"
