Se agregó el estilo para que no se borre la action bar, se agrego la relacion de objetos de los activities  a las clases

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Favor de pasar la tarjeta por el lector para iniciar sesión"
+        android:text="@string/favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n"
         fontPath="fonts/Roboto-Bold.ttf"
         android:layout_marginTop="31dp"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLogin"
@@ -50,7 +50,7 @@
         android:id="@+id/btnOlvideTarjetaLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Olvidé mi tarjeta"
+        android:text="@string/olvid_mi_tarjeta"
         android:layout_marginTop="28dp"
         app:layout_constraintTop_toBottomOf="@+id/imvRFIDLogin"
         android:layout_marginRight="8dp"
