--- a/app/src/main/res/layout/activity_nucleo.xml
+++ b/app/src/main/res/layout/activity_nucleo.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/drawer_layout"
     android:layout_height="match_parent"
     tools:context="arenzo.alejandroochoa.ccure.nucleo">
 
-</android.support.constraint.ConstraintLayout>
+    <include
+        layout="@layout/app_bar_menu_principal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_menu_principal"
+        app:menu="@menu/menu_principal" />
+
+</android.support.v4.widget.DrawerLayout>
