--- a/app/src/main/res/layout/activity_login_manual.xml
+++ b/app/src/main/res/layout/activity_login_manual.xml
@@ -12,11 +12,12 @@
         android:layout_height="20dp"
         android:gravity="center"
         android:text="22-04-2017 12:23:16"
-        tools:layout_editor_absoluteY="16dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/btnLoginManual"
@@ -49,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/escribe_tu_numero_de_empleado"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="27dp"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLoginManual"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
