--- a/app/src/main/res/layout/fragment_checadas.xml
+++ b/app/src/main/res/layout/fragment_checadas.xml
@@ -1,13 +1,62 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="arenzo.alejandroochoa.ccure.checadas">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="CHECADAS" />
 
-</FrameLayout>
+    <RelativeLayout
+        android:layout_width="338dp"
+        android:layout_height="218dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="8dp"
+        android:background="@drawable/custom_border"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
+        android:id="@+id/relativeLayout3">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="304dp"
+        android:layout_height="159dp"
+        android:background="@drawable/custom_border"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/relativeLayout3"
+        android:layout_marginLeft="8dp">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout"
+        android:layout_width="202dp"
+        android:layout_height="92dp"
+        android:background="@drawable/custom_border"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relativeLayout2"
+        android:layout_width="443dp"
+        android:layout_height="92dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/custom_border"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/relativeLayout"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </RelativeLayout>
+</android.support.constraint.ConstraintLayout>
