--- a/app/src/main/res/layout/activity_login_manual.xml
+++ b/app/src/main/res/layout/activity_login_manual.xml
@@ -24,6 +24,9 @@
         android:layout_width="88dp"
         android:layout_height="42dp"
         android:text="@string/entrar"
+        android:background="@color/primary_light"
+        android:textColor="@android:color/white"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_marginTop="45dp"
         app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado"
         android:layout_marginRight="8dp"
@@ -50,6 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/escribe_tu_numero_de_empleado"
+        android:textSize="18dp"
         android:layout_marginTop="27dp"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLoginManual"
         android:layout_marginRight="8dp"
