--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:text="@string/favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n"
         fontPath="fonts/Roboto-Bold.ttf"
         android:layout_marginTop="22dp"
+        android:textSize="16dp"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLogin"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -54,7 +55,8 @@
 
     <Button
         android:id="@+id/btnOlvideTarjetaLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
+        android:foreground="?android:attr/selectableItemBackground"
         android:layout_height="wrap_content"
         android:text="@string/olvid_mi_tarjeta"
         android:layout_marginTop="18dp"
@@ -62,6 +64,8 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
+        android:background="@color/primary_light"
+        android:textColor="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
