--- a/app/src/main/res/layout/fragment_sincronizacion.xml
+++ b/app/src/main/res/layout/fragment_sincronizacion.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/sincronizaci_n"
+        android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,18 +26,32 @@
         android:text="@string/selecciona_una_opci_n_para_exportar_la_informaci_n"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_constraintHorizontal_bias="0.506" />
 
-    <RadioGroup
-        android:layout_width="191dp"
-        android:layout_height="69dp"
+    <Button
+        android:id="@+id/btnSincronizar"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:background="@color/primary_light"
+        android:text="Sincronizar"
+        android:textColor="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8"
-        android:id="@+id/radioGroup">
+        app:layout_constraintHorizontal_bias="0.0">
 
         <RadioButton
             android:id="@+id/rdRed"
@@ -46,22 +61,18 @@
             android:layout_marginRight="12dp"
             android:text="@string/red" />
 
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_weight="1" />
+
         <RadioButton
             android:id="@+id/rdArchivo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center"
+            android:layout_weight="1"
             android:text="@string/archivo" />
     </RadioGroup>
 
-    <Button
-        android:id="@+id/btnSincronizar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sincronizar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 </android.support.constraint.ConstraintLayout>
