--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,39 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:ignore="MissingPrefix"
-    tools:context="arenzo.alejandroochoa.ccure.main">
+    tools:context="arenzo.alejandroochoa.ccure.Activities.main">
 
-    <TextView
+    <arenzo.alejandroochoa.ccure.Helpers.reloj
         android:id="@+id/txtFechaLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="22-04-2017 12:23:16"
-        android:layout_marginRight="8dp"
-        fontPath="fonts/Roboto-Bold.ttf"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="DigitalClock"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtMensajeLogin"
+        fontPath="fonts/Roboto-Bold.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n"
-        fontPath="fonts/Roboto-Bold.ttf"
-        android:layout_marginTop="22dp"
-        android:textSize="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtFechaLogin"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginTop="20dp"
+        android:text="@string/favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n"
+        android:textSize="16dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtFechaLogin" />
 
     <ImageView
         android:id="@+id/imvRFIDLogin"
@@ -45,13 +43,14 @@
         android:layout_height="220dp"
         app:srcCompat="@drawable/im_rfid"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/txtMensajeLogin"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.504" />
 
     <Button
         android:id="@+id/btnOlvideTarjetaLogin"
