--- a/app/src/main/res/layout/content_menu_principal.xml
+++ b/app/src/main/res/layout/content_menu_principal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="arenzo.alejandroochoa.ccure.nucleo"
+    tools:context="arenzo.alejandroochoa.ccure.Activities.nucleo"
     tools:showIn="@layout/app_bar_menu_principal"
     android:id="@+id/main_content">
 
