--- a/app/src/main/res/layout/fragment_sincronizacion.xml
+++ b/app/src/main/res/layout/fragment_sincronizacion.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="arenzo.alejandroochoa.ccure.sincronizacion">
+    tools:context="arenzo.alejandroochoa.ccure.Fragments.sincronizacion">
 
 
     <TextView
@@ -21,12 +21,12 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="@string/selecciona_una_opci_n_para_exportar_la_informaci_n"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.506" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/btnSincronizar"
@@ -57,7 +57,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginRight="12dp"
-            android:text="@string/red" />
+            android:text="@string/red"
+            android:textSize="18dp" />
 
         <Space
             android:layout_width="wrap_content"
@@ -70,7 +71,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:text="@string/archivo" />
+            android:text="@string/archivo"
+            android:textSize="18dp" />
     </RadioGroup>
 
 </android.support.constraint.ConstraintLayout>
