--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary">#5D7388</color>
-    <color name="primary_dark">#455A64</color>
+    <color name="primary_dark">#455a64</color>
     <color name="primary_light">#929395</color>
     <color name="accent">#C6361B</color>
     <color name="primary_text">#212121</color>
