Se agego a la configuracion poner la URL dinamica, se creo una carpeta para agregar los POJOS

--- a/app/src/main/res/layout/activity_configuracion_unica.xml
+++ b/app/src/main/res/layout/activity_configuracion_unica.xml
@@ -100,11 +100,12 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:editable="false"
         android:ems="10"
-        android:hint="Escribe tu URL"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:maxLength="70"
         android:singleLine="true"
+        android:text="/CCURE/"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
