--- a/app/src/main/res/layout/fragment_configuracion.xml
+++ b/app/src/main/res/layout/fragment_configuracion.xml
@@ -74,7 +74,7 @@
         android:ems="10"
         android:hint="Escribe la dirección del web service"
         android:inputType="textPersonName"
-        android:maxLength="70"
+        android:maxLength="100"
         android:singleLine="true"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -101,11 +101,12 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:editable="false"
         android:ems="10"
-        android:hint="Escribe tu URL"
-        android:inputType="textPersonName"
+        android:inputType="none"
         android:maxLength="70"
         android:singleLine="true"
+        android:text="/CCURE/"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
