--- a/app/src/main/res/layout/dialog_url.xml
+++ b/app/src/main/res/layout/dialog_url.xml
@@ -13,5 +13,6 @@
         android:hint="Escribe la URL de sincronizacion"
         android:inputType="textUri"
         android:maxLength="100"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:text="http://192.168.1.10/CCUREMOVIL/ServiceMethods.svc/" />
 </LinearLayout>
