Se valido que el numero de empleado no sea 0 y se agrego un boton de busqueda en checadas

--- a/app/src/main/res/layout/fragment_checadas.xml
+++ b/app/src/main/res/layout/fragment_checadas.xml
@@ -13,14 +13,15 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="CASETA ENTRADA A MINA 1090"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="31dp" />
 
     <com.kyleduo.switchbutton.SwitchButton
         android:id="@+id/sbTipoChecada"
@@ -28,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/icons"
         app:kswTextOn= "Entrada"
         app:kswTextOff= "Salida "
@@ -56,7 +57,7 @@
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/sbTipoChecada"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp"
@@ -89,12 +90,13 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
         android:src="@color/divider"
         app:layout_constraintBottom_toTopOf="@+id/imgFondoAcceso"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNoEmpleado" />
+        tools:layout_editor_absoluteX="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnBuscarEmpleado" />
 
     <ImageView
         android:id="@+id/imgFondoAcceso"
@@ -163,19 +165,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp" />
 
-
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/imgIndicadorOnline"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:background="@drawable/cuadro_verde"
-        android:elevation="1dp"
-        app:civ_border_width="9dp"
-        app:civ_shadow="true"
-        app:civ_shadow_radius="10"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+    <Button
+        android:id="@+id/btnBuscarEmpleado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/primary"
+        android:text="Buscar"
+        android:textColor="@color/icons"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtNoEmpleado" />
+
 
 </android.support.constraint.ConstraintLayout>
