--- a/app/src/main/res/layout/activity_configuracion_unica.xml
+++ b/app/src/main/res/layout/activity_configuracion_unica.xml
@@ -106,6 +106,7 @@
         android:maxLength="70"
         android:singleLine="true"
         android:text="/CCURE/"
+        android:textColor="@color/ksw_md_solid_shadow"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
