Se actualizo la sincronizacion inicial y la recurrente, se agrego al manifest la orientacion de la primer sincronizacion, se adaptaron las vistas al tamanio de la tablet

--- a/app/src/main/res/layout/fragment_sincronizacion.xml
+++ b/app/src/main/res/layout/fragment_sincronizacion.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/sincronizaci_n"
-        android:textSize="20dp"
+        android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="@string/selecciona_una_opci_n_para_exportar_la_informaci_n"
+        android:textSize="22sp"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
