--- a/app/src/main/res/layout/activity_login_manual.xml
+++ b/app/src/main/res/layout/activity_login_manual.xml
@@ -14,25 +14,26 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="DigitalClock"
-        android:textSize="18sp"
+        android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnLoginManual"
-        android:layout_width="88dp"
-        android:layout_height="42dp"
-        android:text="@string/entrar"
-        android:background="@color/primary_light"
-        android:textColor="@android:color/white"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:layout_marginTop="45dp"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="45dp"
+        android:background="@color/primary_light"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="@string/entrar"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
 
     <EditText
         android:id="@+id/edtNumeroEmpleado"
@@ -40,9 +41,8 @@
         android:layout_height="45dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="37dp"
         android:ems="10"
-        android:hint="2389"
         android:inputType="number"
         android:maxLength="5"
         android:singleLine="true"
@@ -59,7 +59,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="32dp"
         android:text="@string/escribe_tu_numero_de_empleado"
-        android:textSize="20dp"
+        android:textSize="22dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLoginManual" />
