--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:text="DigitalClock"
-        android:textSize="18sp"
+        android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,14 +25,11 @@
         fontPath="fonts/Roboto-Bold.ttf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="@string/favor_de_pasar_la_tarjeta_por_el_lector_para_iniciar_sesi_n"
-        android:textSize="16dp"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLogin" />
@@ -54,19 +51,20 @@
 
     <Button
         android:id="@+id/btnOlvideTarjetaLogin"
-        android:layout_width="150dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:layout_height="wrap_content"
-        android:text="@string/olvid_mi_tarjeta"
-        android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@+id/imvRFIDLogin"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
-        android:background="@color/primary_light"
-        android:textColor="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginTop="18dp"
+        android:background="@color/primary_light"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:text="@string/olvid_mi_tarjeta"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imvRFIDLogin" />
 
 </android.support.constraint.ConstraintLayout>
