Se agrego el icono a la aplicacion ademas de que se agregaron imagenes de portada en los espacios en blanco

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="173dp"
+        android:layout_marginTop="150dp"
         app:layout_constraintTop_toBottomOf="@+id/edtTarjeta" />
 
     <EditText
@@ -67,5 +67,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtMensajeLogin" />
+
+    <ImageView
+        android:id="@+id/imgPortadaMain"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnOlvideTarjetaLogin"
+        app:srcCompat="@drawable/im_logo_penia" />
 
 </android.support.constraint.ConstraintLayout>
