--- a/app/src/main/res/layout/activity_login_manual.xml
+++ b/app/src/main/res/layout/activity_login_manual.xml
@@ -55,7 +55,7 @@
         android:id="@+id/btnCero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="90dp"
         android:layout_marginTop="8dp"
         android:text="0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -105,7 +105,7 @@
         android:id="@+id/btnCinco"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="90dp"
         android:layout_marginTop="8dp"
         android:text="5"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -156,14 +156,13 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="8dp"
         android:text="Borrar"
         app:layout_constraintBottom_toTopOf="@+id/btnLoginManual"
         app:layout_constraintLeft_toRightOf="@+id/btnCuatro"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/txtNumeroEmpleado"
@@ -177,4 +176,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtFechaLoginManual" />
+
+    <ImageView
+        android:id="@+id/imgPortadaManual"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginManual"
+        app:layout_constraintVertical_bias="0.501"
+        app:srcCompat="@drawable/im_logo_penia" />
 </android.support.constraint.ConstraintLayout>
