La pantalla se mantiene encendida cuando esta en checadas y se cambio el color de entrada de rojo a amarillo

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="icons">#000000</color>
     <color name="icons2">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
+    <color name="entrada">#FEE300</color>
 </resources>
