--- a/app/src/main/res/layout/fragment_checadas.xml
+++ b/app/src/main/res/layout/fragment_checadas.xml
@@ -234,16 +234,13 @@
         android:id="@+id/tbnTipoLectura"
         android:layout_width="130dp"
         android:layout_height="60dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="40dp"
         android:layout_marginTop="28dp"
         android:background="@color/accent"
-        android:checked="true"
+        android:checked="false"
         android:textColor="@color/ksw_md_solid_disable"
         android:textOff="Olvidó tarjeta"
         android:textOn="Checar con tarjeta"
-        app:layout_constraintHorizontal_bias="0.581"
-        app:layout_constraintLeft_toRightOf="@+id/edtNoTarjeta"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sbTipoChecada" />
 
