--- a/app/src/main/res/layout/activity_login_manual.xml
+++ b/app/src/main/res/layout/activity_login_manual.xml
@@ -25,15 +25,15 @@
         android:layout_height="60dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginTop="70dp"
         android:background="@color/primary_light"
         android:foreground="?android:attr/selectableItemBackground"
         android:text="@string/entrar"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnOcho" />
+        app:layout_constraintTop_toBottomOf="@+id/btnBorrar" />
 
     <EditText
         android:id="@+id/edtNumeroEmpleado"
@@ -53,116 +53,132 @@
 
     <Button
         android:id="@+id/btnCero"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:text="0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
+        app:layout_constraintRight_toLeftOf="@+id/btnBorrar"
+        app:layout_constraintTop_toBottomOf="@+id/btnSiete" />
 
     <Button
         android:id="@+id/btnUno"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="10dp"
         android:text="1"
-        app:layout_constraintLeft_toRightOf="@+id/btnCero"
+        app:layout_constraintRight_toLeftOf="@+id/btnDos"
         app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
 
     <Button
         android:id="@+id/btnDos"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="10dp"
         android:text="2"
-        app:layout_constraintLeft_toRightOf="@+id/btnUno"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
 
     <Button
         android:id="@+id/btnTres"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="10dp"
         android:text="3"
         app:layout_constraintLeft_toRightOf="@+id/btnDos"
         app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
 
     <Button
         android:id="@+id/btnCuatro"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:text="4"
-        app:layout_constraintLeft_toRightOf="@+id/btnTres"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
+        app:layout_constraintRight_toLeftOf="@+id/btnCinco"
+        app:layout_constraintTop_toBottomOf="@+id/btnUno" />
 
     <Button
         android:id="@+id/btnCinco"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
         android:text="5"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnDos" />
 
     <Button
         android:id="@+id/btnSeis"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
         android:text="6"
         app:layout_constraintLeft_toRightOf="@+id/btnCinco"
-        app:layout_constraintTop_toBottomOf="@+id/btnUno" />
-
-    <Button
-        android:id="@+id/btnSiete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:text="7"
-        app:layout_constraintLeft_toRightOf="@+id/btnSeis"
-        app:layout_constraintTop_toBottomOf="@+id/btnDos" />
-
-    <Button
-        android:id="@+id/btnOcho"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:text="8"
-        app:layout_constraintLeft_toRightOf="@+id/btnSiete"
         app:layout_constraintTop_toBottomOf="@+id/btnTres" />
 
     <Button
-        android:id="@+id/btnNueve"
+        android:id="@+id/btnSiete"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:text="9"
-        app:layout_constraintLeft_toRightOf="@+id/btnOcho"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        android:text="7"
+        app:layout_constraintRight_toLeftOf="@+id/btnOcho"
         app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />
 
     <Button
-        android:id="@+id/btnBorrar"
+        android:id="@+id/btnOcho"
+        style="@style/botonTeclado"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
+        android:text="8"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />
+
+    <Button
+        android:id="@+id/btnNueve"
+        style="@style/botonTeclado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:text="9"
+        app:layout_constraintLeft_toRightOf="@+id/btnOcho"
+        app:layout_constraintTop_toBottomOf="@+id/btnSeis" />
+
+    <Button
+        android:id="@+id/btnBorrar"
+        style="@style/botonTeclado"
+        android:layout_width="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:text="Borrar"
-        app:layout_constraintBottom_toTopOf="@+id/btnLoginManual"
-        app:layout_constraintLeft_toRightOf="@+id/btnCuatro"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintLeft_toLeftOf="@+id/btnOcho"
+        app:layout_constraintRight_toRightOf="@+id/btnNueve"
+        app:layout_constraintTop_toBottomOf="@+id/btnOcho"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <TextView
         android:id="@+id/txtNumeroEmpleado"
@@ -189,6 +205,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLoginManual"
-        app:layout_constraintVertical_bias="0.501"
-        app:srcCompat="@drawable/im_logo_penia" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/im_logo_penia"
+        app:layout_constraintHorizontal_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
