Se hizo la entrega en penia con pequenios cambios

--- a/app/src/main/res/layout/activity_login_manual.xml
+++ b/app/src/main/res/layout/activity_login_manual.xml
@@ -219,9 +219,8 @@
         android:layout_marginTop="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:text="Button"
+        android:text="@string/ingresar_tarjeta"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnLoginManual"
-        tools:text="@string/ingresar_tarjeta" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLoginManual" />
 </android.support.constraint.ConstraintLayout>
